@startuml Quizscendence_GameFSM
title Quizscendence — Game State Machine (server/game/fsm.py)

skinparam shadowing false
skinparam state {
  BackgroundColor #eef2ff
  BorderColor #4A6FA5
}

[*] --> Lobby

Lobby --> Answering : start_game

Answering --> Evaluation : submit_answer

Evaluation --> GameOver   : resolve_evaluation\n[is_game_over]
Evaluation --> Nomination : resolve_evaluation\n[has_last_correct_player_alive]
Evaluation --> Answering  : resolve_evaluation\n[else]

Nomination --> Answering : nominate_player

' cancel_game can fire from any non-final state
Lobby      --> GameOver : cancel_game
Answering  --> GameOver : cancel_game
Evaluation --> GameOver : cancel_game
Nomination --> GameOver : cancel_game

GameOver --> [*]

note right of Evaluation
  resolve_evaluation is a single
  guarded transition that branches:
  game_over > nomination > answering
end note

@enduml
